<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PracticalTest01Var05MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">
        <Button
            android:id="@+id/navigate_to_secondary_activity_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/navigate_to_secondary_activity"
            android:layout_alignParentEnd="true"
            tools:ignore="MissingConstraints" />

        <Button
            android:text="@string/top_left"
            android:gravity="center"
            android:id="@+id/top_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/navigate_to_secondary_activity_button"
            android:layout_alignParentStart="true"/>

        <Button
            android:gravity="center"
            android:text="@string/top_right"
            android:id="@+id/top_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/navigate_to_secondary_activity_button"
            android:layout_alignEnd="@id/navigate_to_secondary_activity_button"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/center"
            android:text="@string/center"
            android:gravity="center"
            android:layout_marginStart="40dp"
            android:layout_below="@id/top_left"
            android:layout_alignStart="@id/navigate_to_secondary_activity_button"
            android:ems="7"/>

        <Button
            android:text="@string/bottom_left"
            android:gravity="center"
            android:id="@+id/bottom_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/center"
            android:layout_alignParentStart="true"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/bottom_right"
            android:layout_below="@id/center"
            android:text="@string/bottom_right"
            android:layout_alignParentEnd="true"/>

        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bottom_left"
            android:ems="7"
            android:gravity="center"
            android:enabled="false"/>



    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>